# Blix

./: CMakeLists.txt  LICENSE  README.md  TetrisGame.sln  TetrisGame.vcxproj  build-vs.bat  build.bat  build_check.bat
.kiro/specs/tetris-game/: design.md  requirements.md  tasks.md
src/: CombinedInputHandler.h  ConsoleRenderer.cpp  ConsoleRenderer.h  Constants.h  ControllerInputHandler.cpp  ControllerInputHandler.h  GameBoard.cpp  GameBoard.h  IConfigManager.h  IInputHandler.h  IRenderer.h  ScoreSystem.cpp  ScoreSystem.h  TetrisApplication.cpp  TetrisApplication.h  TetrisGame.cpp  TetrisGame.h  Tetromino.cpp  Tetromino.h  TetrominoManager.cpp  TetrominoManager.h  WindowsInputHandler.cpp  WindowsInputHandler.h  main.cpp
